--- a/macos/Podfile
+++ b/macos/Podfile
@@ -28,8 +28,9 @@ flutter_macos_podfile_setup
 
 target 'Runner' do
   use_frameworks!
+  use_modular_headers!
 
-  flutter_install_all_macos_pods File.dirname(File.realpath(__FILE__))
+  flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
     inherit! :search_paths
   end
